# django-rabbitmq

./: .gitignore  LICENSE  README.rst  setup.cfg  setup.py
django-mq/: __init__.py  apps.py  mq.py
django-rabbitmq/: __init__.py  apps.py  mq.py
django_rabbitmq/: __init__.py  apps.py  mq.py
