[metadata]
name = django-rabbitmq
version = 0.1
description = Django Rabbitmq Integration
long_description = file: README.rst
url = https://github.com/wangyuhuiever
author = Yuhui Wang
author_email = wangyuhuiever@163.com
license = BSD-3-Clause
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.1
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:

python_requires = >=3.6

install_requires =
    Django>=2.2
    pika